--- a/src/app/hero-lets-work/hero-lets-work.component.scss
+++ b/src/app/hero-lets-work/hero-lets-work.component.scss
@@ -8,16 +8,16 @@
 .circle-large {
   width: 200px;
   height: 200px;
-  top: -20%;
-  left: 40%;
+  top: -10vh;
+  left: 40vw;
   background-image: url("../../../public/images/hero/Ellipse\ 5.png");
 }
 
 .circle-small {
   width: 50px;
   height: 50px;
-  top: 20%;
-  left: 80%;
+  top: 10vh;
+  left: 70vw;
   background-image: url("../../../public/images/hero/Ellipse\ 6.png");
 }
 .work-container {
@@ -48,7 +48,6 @@
     border-radius: 0.5rem;
     background: transparent;
     font-size: 1rem;
-    cursor: pointer;
   }
 
   .message-btn:hover {
